syntax = "proto3";
package com.axolotl.kohdneyms;

enum Role {
	SPY = 0;
	SPYMASTER = 1;
}

enum Type {
	RED = 0;
	BLUE = 1;
	CIVILIAN = 2;
	ASSASSIN = 3;
}

enum State {
	SUCCESS = 0;
	FAILURE = 1;
	END = 2;
}

message Piece {
	Type type = 1;
	string word = 2;
}

message Board {
	repeated Piece board = 1;
	Type starter = 2;
}

message PlayerSelection {
	Type team = 1;
	Role role = 2;
}

message Hint {
	Type team = 1;
	string word = 2;
	int32 number = 3;
}

message HintFromServer {
	Hint hint = 1;
	State state = 2;
}

message WordSelection {
	Type team = 1;
	string word = 2;
}

message WordSelectionFromServer {
	WordSelection selection = 1;
	State state = 2;
}

service GameService{
	rpc initialise(PlayerSelection) returns (Board);
	rpc giveHint(stream Hint) returns (stream HintFromServer);
	rpc selectWord(stream WordSelection) returns (stream WordSelectionFromServer);

}